--- a/config-template.yml
+++ b/config-template.yml
@@ -7,14 +7,14 @@ issues:
     creation_months: [1, 3, 5, 7, 9, 11]
     title_suffix: "- $(date +%Y-%m)"
     fields:
-      priority: "1"
-      status: "Ready"
+      Priority: "P1"
+      Status: "Ready"
   - name: "Buy New Shoes"
     template_file: ".github/ISSUE_TEMPLATE/buy_shoes.md"
     title_suffix: "- $(date +%Y)"
     creation_months: [3, 12]
     fields:
-      priority: "2"
-      status: "Backlog"
-    project_id: "other_project_id"
+      Priority: "P2"
+      Status: "Backlog"
+    project_id: "PVT_kwHOAOKHl84BHgin"  # you can override the default project_id
     target_repo: "other/repo"
