Specify cache dependency path

--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,7 @@ runs:
       uses: actions/setup-go@v5
       with:
         go-version: '1.25'
+        cache-dependency-path: './gh-issue-config-filter/go.sum'
 
     - name: Build filter tool
       shell: bash
