Pass GitHub token

--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -19,4 +19,5 @@ jobs:
         uses: Rindrics/recurring-backlog-item-creator@latest
         with:
           config: 'config-template.yml'
+          token: ${{ secrets.GITHUB_TOKEN }}
 
